samples/_failures_safe/1761483749_9f4c74_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d26e9351.c: In function ‘main’:
./samples/SAFE/__tmp_d26e9351.c:137:5: error: expected declaration or statement at end of input
  137 |     }
      |     ^
